# apl-viewhost-web

./: .gitignore  CHANGELOG.md  CMakeLists.txt  NOTICE  README.md  THIRD-PARTY.txt  package.json
fonts/: LICENSE.txt
js/: .gitignore  package.json
js/apl-html/: .gitignore  package.json  tsconfig.json  tslint.json  typedoc.json  webpack.common.js  webpack.dev.js  webpack.prod.js  webpack.test.js
js/apl-html/lib/: .gitignore
js/apl-html/lib/dts/: Action.d.ts  Component.d.ts  ConfigurationChange.d.ts  Content.d.ts  Context.d.ts  Event.d.ts  Extension.d.ts  ExtensionClient.d.ts  Graphic.d.ts  GraphicElement.d.ts  GraphicPattern.d.ts  Keyboard.d.ts  LiveArray.d.ts  LiveMap.d.ts  Logger.d.ts  Metrics.d.ts  Module.d.ts  Radii.d.ts  Rect.d.ts  RootConfig.d.ts  StyledText.d.ts
js/apl-html/lib/extensions/: IExtensionEventCallbackResult.d.ts  IExtensionManager.d.ts
js/apl-html/lib/logging/: LoggerFactory.d.ts
js/apl-html/src/: APLRenderer.ts  AudioPlayerWrapper.ts  CommandFactory.ts  ComponentFactory.ts  Content.ts  index.ts
js/apl-html/src/assets/css/: fonts.css
js/apl-html/src/components/: ActionableComponent.ts  Component.ts  Container.ts  EditText.ts  Frame.ts  GridSequence.ts  Host.ts  Image.ts  MultiChildScrollable.ts  NoOpComponent.ts  ScrollView.ts  Scrollable.ts  Sequence.ts  TouchWrapper.ts  TouchableComponent.ts
js/apl-html/src/components/avg/: AVG.ts  AVGText.ts  Filter.ts  Gradient.ts  GraphicsUtils.ts  Group.ts  Path.ts  Patterns.ts  VectorGraphic.ts  VectorGraphicElementUpdater.ts
js/apl-html/src/components/filters/: Blend.ts  Blur.ts  BlurCanvas.ts  Color.ts  Gradient.ts  Grayscale.ts  ImageFilter.ts  Noise.ts  Saturate.ts
js/apl-html/src/components/helpers/: BoundsFitter.ts  ImageAligner.ts  StylesApplier.ts  StylesUtil.ts
js/apl-html/src/components/pager/: PagerComponent.ts
js/apl-html/src/components/text/: AbstractWordSequencer.ts  DocumentBuilder.ts  Emoji.ts  Geometry.ts  MeasureMode.ts  NodeTraverse.ts  RichTextNode.ts  RichTextParser.ts  Text.ts
js/apl-html/src/components/video/: AbstractVideoComponent.ts  IVideoFactory.ts  Video.ts  VideoCallTypes.ts  VideoEventProcessor.ts  VideoEventSequencer.ts  VideoFactory.ts  VideoHolder.ts
js/apl-html/src/events/: ControlMedia.ts  DataSourceFetchRequest.ts  Event.ts  ExtensionEvent.ts  Finish.ts  Focus.ts  HighlightSequencer.ts  LineHighlight.ts  MarkSequencer.ts  MediaRequest.ts  OpenUrl.ts  PlayMedia.ts  Preroll.ts  ReInflate.ts  RequestFirstLineBounds.ts  RequestLineBounds.ts  ScrollTo.ts  SendEvent.ts  SetPage.ts  Speak.ts
js/apl-html/src/extensions/: CreateExtension.ts  IExtension.ts  IExtensionEventCallbackResult.ts  IExtensionManager.ts  LiveArray.ts  LiveMap.ts
js/apl-html/src/logging/: ILogger.ts  LogCommand.ts  LogLevel.ts  LogTransport.ts  LoggerFactory.ts
js/apl-html/src/media/: IMediaEventListener.ts  IMediaPlayerHandle.ts  IMediaSource.ts  IPlayer.ts  IURLRequest.ts  IVideoPlayer.ts  MediaErrorCode.ts  MediaEventProcessor.ts  MediaEventSequencer.ts  MediaPlayerHandle.ts  MediaState.ts  PlaybackManager.ts  Resource.ts
js/apl-html/src/media/audio/: Demux.ts  (+9 more)
js/apl-html/src/telemetry/: Counter.ts  FluidityIncidentReporter.ts  MetricsEvent.ts  MetricsRecorder.ts  TDigest.ts  Timer.ts
js/apl-html/src/utils/: AplRectUtils.ts  AplVersionUtils.ts  ArrayUtils.ts  BrowserUtils.ts  ColorUtils.ts  Constant.ts  CueControl.ts  DisplayStateUtils.ts  EventUtils.ts  FilterUtils.ts  FontUtils.ts  ImageRetrievalUtils.ts  ImageUtils.ts  LocaleMethods.ts  Maybe.ts  MediaRequestUtils.ts  MediaStateUtils.ts  NumberUtils.ts  PromiseUtils.ts  SoftRandom.ts  SpatialNavigation.ts  TextTrackUtils.ts  TextUtils.ts  TransformUtils.ts  VectorGraphicUtils.ts
js/apl-wasm/: .gitignore  .mocha  .mocha.single  .npmignore  LICENSE.txt  package-lock.json  package.json  tsconfig.json  tslint.json  wasm-loader.js  webpack.common.js  webpack.dev.js  webpack.happynpm.js  webpack.prod.js  webpack.test.js
js/apl-wasm/src/: APLWASMRenderer.ts  ConfigurationChange.ts  LiveArray.ts  LiveMap.ts  PackageLoader.ts  index.ts
js/apl-wasm/src/common/: Queue.ts  ViewhostTypes.ts
js/apl-wasm/src/content/: PackageLoader.ts  PackageManager.ts
js/apl-wasm/src/document/: DocumentContext.ts  DocumentHandle.ts  DocumentManager.ts  DocumentState.ts  IEmbeddedDocumentFactory.ts  PreparedDocument.ts
js/apl-wasm/src/extensions/: Extension.ts  ExtensionConfiguration.ts  ExtensionConnection.ts  ExtensionCreationUtils.ts  ExtensionFilterDefinition.ts  ExtensionManager.ts  ExtentionClient.ts  IDocumentState.ts  IExtension.ts
js/apl-wasm/src/viewhost/: APLViewhostWASM.ts  IRequest.ts  ViewController.ts  ViewhostConfig.ts  ViewhostContext.ts
js/dts-packer/: README.md  package-lock.json  package.json  tsconfig.json  webpack.js
js/dts-packer/src/: index.ts
scripts/: fetch.js  wasm-build.sh  wasm-bundle.sh
wasm/: CMakeLists.txt  README.md  config.cmake
wasm/include/utils/: jsparser.h
wasm/include/wasm/: action.h  audioplayer.h  audioplayerfactory.h  component.h  configurationchange.h  content.h  context.h  dimension.h  documentconfig.h  documentcontext.h  documentmanager.h  edittextbox.h  embindutils.h  event.h  extension.h  extensionclient.h  graphic.h  graphicelement.h  graphicpattern.h  importrequest.h  livearray.h  livemap.h  localemethods.h  log.h  logbridge.h  mediaplayer.h  mediaplayerfactory.h  metrics.h  packagemanager.h  radii.h  rect.h  rootconfig.h  session.h  textlayout.h  textmeasurement.h  wasmmetrics.h
wasm/src/: action.cpp  audioplayer.cpp  audioplayerfactory.cpp  component.cpp  configurationchange.cpp  content.cpp  context.cpp  dimension.cpp  documentconfig.cpp  documentcontext.cpp  documentmanager.cpp  edittextbox.cpp  embindutils.cpp  event.cpp  extension.cpp  extensionclient.cpp  graphic.cpp  graphicelement.cpp  graphicpattern.cpp  livearray.cpp  livemap.cpp  localemethods.cpp  log.cpp  logbridge.cpp  main.cpp  mediaplayer.cpp  mediaplayerfactory.cpp  metrics.cpp  packagemanager.cpp  rootconfig.cpp  session.cpp  textlayout.cpp  textmeasurement.cpp  wasmmetrics.cpp
wasm/src/utils/: jsparser.cpp
(+24 files in other folders)
